--- a/styles/globals.css
+++ b/styles/globals.css
@@ -3,31 +3,77 @@
 @tailwind utilities;
 
 p {
-  margin: 15px 0;
-  line-height: 1.8;
+  margin: 1rem 0;
 }
 
 .blog-text ul,
 ol {
   font-size: 110%;
-  line-height: 2.3;
   font-weight: bold;
-  margin: 10px 0;
+  margin: 0.625rem 0;
 }
 
 .blog-text pre {
   background: #f4f4f4;
-  padding: 20px;
-  margin: 20px 0;
-  line-height: 2.3;
+  padding: 1.25rem 20px;
+  margin: 1.25rem 0;
 }
 
 .blog-text h1 {
-  font-size: 35px;
+  font-size: 2.1875rem;
 }
 
 .blog-text h2,
 .blog-text h3,
 .blog-text h4 {
-  font-size: 27px;
+  font-size: 1.6875rem;
+}
+
+html {
+  box-sizing: border-box;
+}
+body {
+  -webkit-font-smoothing: antialiased;
+}
+html,
+body,
+#root,
+#__next {
+  height: 100%;
+}
+*,
+*:before,
+*:after {
+  box-sizing: inherit;
+  margin: 0;
+}
+* {
+  line-height: calc(1em + 0.5rem);
+}
+#root,
+#__next {
+  isolation: isolate;
+}
+img,
+picture,
+video,
+canvas,
+svg {
+  display: block;
+  max-width: 100%;
+}
+input,
+button,
+textarea,
+select {
+  font: inherit;
+}
+p,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  overflow-wrap: break-word;
 }
